Update all files

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/aruntscaria.png" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎨</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arun T Scaria</title>
+    <title>Stanford d. Design Process - UniVerse Case Study</title>
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Stanford d. Design Process - UniVerse Case Study" />
+    <meta property="og:description" content="A comprehensive UX design case study following Stanford d.school methodology for UniVerse - a digital wallet app for university students." />
+    <meta property="og:type" content="website" />
+    <meta name="description" content="Stanford d.school design process case study for UniVerse - a digital wallet app for university students. Explore empathize, define, ideate, prototype, and test phases." />
   </head>
   <body>
     <div id="root"></div>
